--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -19,7 +19,8 @@ footer {
     @media screen and (min-width:1200px) {
     justify-content: space-between;
     display: flex;
-    align-items: baseline;
+    align-items: flex-start;
+    flex-direction: row;
   }
   }
 
@@ -115,11 +116,7 @@ footer {
       }
       @media screen and (min-width: 768px) {
         display: flex;
-      }
-    @include desktop {
-      display:flex;
-      align-items: space-around;
-    }}
+      }}
   
   
    .your-mail {
