--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -2,7 +2,7 @@
     min-height: 40px;
     min-width: 40px;
     display: flex;
- margin-left: auto;
+    margin-left: auto;
     padding: 0;
     background-color: transparent;
     fill: var(--text-color);
@@ -13,32 +13,46 @@
     &:hover,
     &:focus {
       fill: var(--link-color);
-    }
-    @include tablet {
-      display: none;
-    }
-    @include desktop {
-      display: none;
-    }
-  }
+      }}
+
+.mobile-menu {
+  position: fixed;
+  background-color: var(--mainbackground);
+  flex-direction: column;
+  transform: translateY(-100%);
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  top: 0px;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding-top: 10px;
+  padding-right: 15px;
+  padding-bottom: 48px;
+  padding-left: 40px;
+  transition: transform 250ms var(--timing-function),
+  opacity 250ms var(--timing-function),
+  visibility 250ms var(--timing-function);
+
+  &.is-open {
+    transform: translateY(0);
+    visibility: visible;
+    opacity: 1;
+  }}
 
 .mobile-menu__wrap {
-    display: flex;
+  display: flex;
   flex-direction: column;
   justify-content: space-between;
   width: 100vw;
   height: 100vh;
+}
 
-  
-  @media screen and (min-width:768px) {
-    display: none;
-  }
-}
 .mobile-nav {
-    
-    margin-left: 40px;
-    margin-top: 8px;
+  margin-top: 8px;
 }
+
 .mobile-nav__unit {
     margin-bottom: 32px;
 }
@@ -56,17 +70,14 @@
      color: var(--link-color);
 
     transition: color 250ms var(---timing-function);}
+}
 
-}
-.active-page {color: var(--link-color);
-}
+.active-page {color: var(--link-color);}
+
 .mob-contact {
-    
+    gap: 32px;   
 }
-.mobile-contact {
-    gap: 32px;
-    margin-left: 40px;
-}
+
 .mobile-contact__link {
     font-weight: 500;
     font-size: 24px;
@@ -87,10 +98,9 @@ font-size: 34px;
 }
 .mobile-soc {
     display: flex;
-    margin-top: 64px;
-    margin-bottom: auto;
-    margin-left: 40px;
+    // margin-top: 64px;  
 }
+
 .mobile-soc__item {
     padding: 0 10px;
     list-style: none;
