--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -45,12 +45,13 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 100vw;
-  height: 100vh;
+  // width: 100vw;
+  // height: 100vh;
 }
 
 .mobile-nav {
   margin-top: 8px;
+
 }
 
 .mobile-nav__unit {
@@ -74,8 +75,8 @@
 
 .active-page {color: var(--link-color);}
 
-.mob-contact {
-    gap: 32px;   
+.mobile-contact {
+    margin-bottom: 32px;   
 }
 
 .mobile-contact__link {
@@ -98,7 +99,8 @@ font-size: 34px;
 }
 .mobile-soc {
     display: flex;
-    // margin-top: 64px;  
+   margin-top: 64px;
+ 
 }
 
 .mobile-soc__item {
