--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -91,6 +91,7 @@ footer {
    .first-colum {
     text-align: center;
     @media screen and (min-width:1200px) {
+      text-align: left;
       margin-right: 70px;}}
    .second-colum {
     text-align: center;
@@ -117,12 +118,14 @@ footer {
       @media screen and (min-width: 768px) {
         display: flex;
       }}
-  
+  .join-label {
+    @media screen and (max-width:479px) {
+      width: 100%;
+    }
+  }
   
    .your-mail {
     height: 50px;
-    max-width: 450px;
-    margin-right: 12px;
     padding: 15px 16px;
     border: 1px solid rgba(255, 255, 255, 0.3);
     background: #2F303A;
@@ -133,6 +136,7 @@ footer {
     align-items: center;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
+    width: 100%;
 
     @media screen and (min-width:480px) {
       width: 450px;
@@ -140,6 +144,7 @@ footer {
 
     @media screen and (min-width:1200px) {
       width: 358px; 
+      margin-right: 12px;
     }
 
     &:focus-within{
@@ -150,12 +155,13 @@ footer {
      }
    }
     
-   .join-mail {display: flex;
-flex-wrap: wrap;
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-width: 480px;}
+.join-mail {display: flex;
+  flex-wrap: wrap;
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+  width: 480px;}
   @media screen and (min-width:1200px) {
-    flex-wrap: nowrap;
+  flex-wrap: nowrap;
   }
 }
   
