--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -47,6 +47,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  overflow: hidden;
+  height: 100%;
   // width: 100vw;
   // height: 100vh;
   margin-bottom: auto;
@@ -103,6 +105,7 @@ font-size: 34px;
 .mobile-soc {
     display: flex;
    margin-top: 64px;
+   flex-wrap: wrap;
  
 }
 
